iOS workflow run

--- a/.github/workflows/mobile_automation.yml
+++ b/.github/workflows/mobile_automation.yml
@@ -17,7 +17,7 @@ on:
         required: true
         options:
           - android
-          # - ios
+          - ios
         default: "android"
       test-type:
         type: choice
